Adding updated table html

--- a/index.html
+++ b/index.html
@@ -65,11 +65,17 @@
                         <th>Comments</th>
                     </tr>
                   </thead>
-                  <tbody></tbody>
+                  <tbody>      </tbody>
                 </table>
               </div>
           </div>
         </div>
       </div>
+
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/4.11.0/d3.js"></script>
+                    <script src="static/js/data.js"></script>
+                    <script src="static/js/app.js"></script>
+
+                    
 </body>
 </html>
